
class UseCase:
    pass