from .use_case import UseCase

class Write(UseCase):
    def write(self, repo, data):
        pass