@startuml
class Entity
class Room
class Hotel

interface Repository
interface RepoMem
interface RepoFile
interface RepoSql
interface ControllerFileHandler
interface ControllerMySql

abstract UseCase
abstract ReadAll
abstract Write

Entity <|-- Room
Entity <|-- Hotel

Repository <|-- RepoMem
Repository <|-- RepoFile
Repository <|-- RepoSql

RepoFile o-- ControllerFileHandler
RepoSql o-- ControllerMySql

UseCase <|---- ReadAll
UseCase <|---- Write

UseCase o-- Repository
UseCase o-- Entity

@enduml